fixed up the marketplace on the text align

--- a/ahoyApp/www/js/src/foundational.css
+++ b/ahoyApp/www/js/src/foundational.css
@@ -908,10 +908,18 @@ header {
 
 /*DIGITAL MARKET*/
 
+#digitalMarket {
+  text-align:center;
+}
+
 /* Style the table */
 #digitalMarketTable {
   border-collapse: collapse;
   margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 600px;
+  width: 100%;
 }
 
 #digitalMarketTable thead {
@@ -951,7 +959,10 @@ header {
   font-size: 16px;
   cursor: pointer;
   border-style: solid;
-  padding: 10px;
+  padding: 8.5px;
+  height:45px;
+  border-width: 1px;
+  border-color: var(--border-color);
 }
 
 #digitalMarketTable button:hover {
@@ -961,6 +972,13 @@ header {
 
 
 /*Physical Market*/
+
+#physicalMarket {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 600px;
+  width: 100%;
+}
 
 #productGrid {
   display: grid;
